[gd_scene load_steps=18 format=3 uid="uid://c0jd7m4whx758"]

[ext_resource type="Script" path="res://components/ui/tasks_distribution.gd" id="1_el5sh"]
[ext_resource type="Theme" uid="uid://2643a6p0thsb" path="res://assets/themes/option_menu_theme.tres" id="1_odiv1"]
[ext_resource type="PackedScene" uid="uid://b2fcleag6p1m2" path="res://components/ui/worker_task_ui.tscn" id="1_w0e8d"]
[ext_resource type="StyleBox" uid="uid://c3nl2fr2yle2k" path="res://assets/styles/blue_button.tres" id="2_3ervg"]
[ext_resource type="Resource" uid="uid://b2ialuikfdmt6" path="res://components/worker_tasks/office_errands.tres" id="2_c0c1i"]
[ext_resource type="StyleBox" uid="uid://sj4sw626k6fa" path="res://assets/styles/hover_button.tres" id="3_0rwap"]
[ext_resource type="Resource" uid="uid://biwbxkepoeave" path="res://components/worker_tasks/project_planning.tres" id="3_uhn20"]
[ext_resource type="Resource" uid="uid://cxaohvlgbeigt" path="res://components/worker_tasks/team_meeting.tres" id="4_3n77e"]
[ext_resource type="StyleBox" uid="uid://dd5xkjppnprpd" path="res://assets/styles/pressed_button.tres" id="4_6f2pg"]
[ext_resource type="StyleBox" uid="uid://bv1o2ciq0ndps" path="res://assets/styles/white_back_red_borders.tres" id="6_e54wr"]
[ext_resource type="FontFile" uid="uid://dqayh6vu7wext" path="res://assets/fonts/Boxfont Round.ttf" id="11_x5yw7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyace"]
bg_color = Color(0.788235, 0.854902, 0.913725, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_p6l23"]
font_size = 50
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iy4dt"]

[sub_resource type="LabelSettings" id="LabelSettings_buvuy"]
font_size = 32
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6qsqy"]
content_margin_left = 15.0
content_margin_top = 10.0
content_margin_right = 15.0
content_margin_bottom = 10.0
bg_color = Color(0.827451, 0.101961, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mm367"]

[node name="TasksDistribution" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vyace")
script = ExtResource("1_el5sh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select a worker and assign tasks"
label_settings = SubResource("LabelSettings_p6l23")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
theme_override_constants/separation = 50
alignment = 1

[node name="WorkerSelection" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_odiv1")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_iy4dt")
theme_override_styles/normal = ExtResource("2_3ervg")
theme_override_styles/hover = ExtResource("3_0rwap")
theme_override_styles/pressed = ExtResource("4_6f2pg")
item_count = 1
popup/item_0/text = "sdf"
popup/item_0/id = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("6_e54wr")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2

[node name="WorkerCurrentTasks" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Current tasks:
"
label_settings = SubResource("LabelSettings_buvuy")
autowrap_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tasks" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 25

[node name="Task1" parent="MarginContainer/VBoxContainer/ScrollContainer/Tasks" instance=ExtResource("1_w0e8d")]
layout_mode = 2

[node name="Task2" parent="MarginContainer/VBoxContainer/ScrollContainer/Tasks" instance=ExtResource("1_w0e8d")]
layout_mode = 2
task = ExtResource("2_c0c1i")

[node name="Task3" parent="MarginContainer/VBoxContainer/ScrollContainer/Tasks" instance=ExtResource("1_w0e8d")]
layout_mode = 2
task = ExtResource("3_uhn20")

[node name="Task4" parent="MarginContainer/VBoxContainer/ScrollContainer/Tasks" instance=ExtResource("1_w0e8d")]
layout_mode = 2
task = ExtResource("4_3n77e")

[node name="HideButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_x5yw7")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_6qsqy")
theme_override_styles/hover = SubResource("StyleBoxFlat_6qsqy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6qsqy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mm367")
text = "X"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/WorkerSelection" to="." method="_on_worker_selection_item_selected"]
[connection signal="button_up" from="MarginContainer/HideButton" to="." method="_on_hide_button_button_up"]
